styles.css
/* roboto-200italic - latin */
@font-face {
  font-display: swap; /* Check https://developer.mozilla.org/en-US/docs/Web/CSS/@font-face/font-display for other options. */
  font-family: 'Roboto';
  font-style: italic;
  font-weight: 200;
  src: url('./fonts/roboto-v47-latin-200italic.woff2') format('woff2'); /* Chrome 36+, Opera 23+, Firefox 39+, Safari 12+, iOS 10+ */
}
/* roboto-regular - latin */
@font-face {
  font-display: swap; /* Check https://developer.mozilla.org/en-US/docs/Web/CSS/@font-face/font-display for other options. */
  font-family: 'Roboto';
  font-style: normal;
  font-weight: 400;
  src: url('./fonts/roboto-v47-latin-regular.woff2') format('woff2'); /* Chrome 36+, Opera 23+, Firefox 39+, Safari 12+, iOS 10+ */
}
/* roboto-italic - latin */
@font-face {
  font-display: swap; /* Check https://developer.mozilla.org/en-US/docs/Web/CSS/@font-face/font-display for other options. */
  font-family: 'Roboto';
  font-style: italic;
  font-weight: 400;
  src: url('./fonts/roboto-v47-latin-italic.woff2') format('woff2'); /* Chrome 36+, Opera 23+, Firefox 39+, Safari 12+, iOS 10+ */
}
/* roboto-900 - latin */
@font-face {
  font-display: swap; /* Check https://developer.mozilla.org/en-US/docs/Web/CSS/@font-face/font-display for other options. */
  font-family: 'Roboto';
  font-style: normal;
  font-weight: 900;
  src: url('./fonts/roboto-v47-latin-900.woff2') format('woff2'); /* Chrome 36+, Opera 23+, Firefox 39+, Safari 12+, iOS 10+ */
}

body {
	display: flex;
	flex-direction: column;
	margin: 0;
	padding: 0;
	font-family: 'Roboto', 'Arial', sans-serif;
	line-height: 1.55;
}

h1, h2, p, figure{
	margin: 0;
	padding: 0;
}

a {
	text-decoration: none;
}

ul {
	list-style: none;
	margin: 0;
	padding: 0;
	display: flex;
	gap: 10px;
	font-size: 18px;
	color: hsl(220, 13%, 91%);
}

nav {
	display: flex;
	justify-content: space-between;
	align-items: center;
	padding: 5px 200px;
	background-color: hsl(291, 35%, 15%);
}

.logo {
	color: hsl(90, 17%, 98%);
	cursor: pointer;
	font-family: 'Georgia', serif;
	font-weight: 600;
	font-size: 24px;
}

.hero {
	background-color: hsl(291, 35%, 15%);
	display: flex;
	padding: 50px 200px;
	align-items: center;
	flex: wrap;
}

.hero-image {
	display: inline;
}

.hero-image > img {
	width: 775px;
	height: 635px;
}

.hero-main-text {
	font-size: 48px;
	font-weight: 900;
	color: hsl(90, 17%, 98%);
}

.hero-secondary-text {
	font-size: 24px;
	color: hsl(220, 13%, 91%);
}

.hero-botao {
	color: hsl(90, 17%, 98%);
	background-color: hsl(271, 45%, 39%);
	font-size: 26px;
	border-radius: 11px;
	padding: 8px 16px;
	margin-top: 5px;
}

.hero-text {
	display: flex;
	flex-direction: column;
	align-items: flex-start;
	width: 730px;
}

.members-info {
	display: flex;
	flex-direction: column;
	padding: 50px 200px;
}

.info-title {
	display: flex;
	align-self: center;
	font-size: 36px;
	color: hsl(291, 35%, 15%);
	margin-bottom: 16px;
}

.members-container {
	display: flex;
	justify-content: space-between;
	flex-wrap: wrap;
}

.pfp-container {
	display: flex;
	flex-direction: column;
	align-items: center;
	width: 250px;
	height: 250px;
	margin-bottom: 20px;
	margin-top: 20px;
}

.pfp {
	border: solid hsl(291, 35%, 15%);
	border-radius: 10px;
	width: 100%;
	height: 100%;
}

figcaption {
	font-size: 20px;
}

